# markupwij

./: meson.build
data/: markup.gresource.xml  markup.ui
src/: main.vala  markup.vala
